pkg/catalog/testdata/new-catalog/want.edge-ingresses.yaml
apiVersion: hub.traefik.io/v1alpha1
kind: EdgeIngress
metadata:
  name: new-catalog-4277033999-portal
  namespace: agent-ns
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: Catalog
      name: new-catalog
  labels:
    app.kubernetes.io/managed-by: traefik-hub
spec:
  service:
    name: dev-portal-service-name
    port: 8080
