pkg/catalog/testdata/new-catalog/want.ingresses.yaml
# Ingress for hub domain in the default namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-catalog-4277033999-hub
  namespace: default
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: Catalog
      name: new-catalog
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: tunnel-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "default-new-catalog-4277033999-stripprefix@kubernetescrd"

spec:
  ingressClassName: ingress-class
  rules:
    - host: majestic-beaver-123.hub-traefik.io
      http:
        paths:
          - path: /whoami-1
            pathType: Prefix
            backend:
              service:
                name: whoami-1
                port:
                  number: 80
          - path: /whoami-2
            pathType: Prefix
            backend:
              service:
                name: whoami-2
                port:
                  number: 8080
  tls:
    - secretName: hub-certificate
      hosts:
        - majestic-beaver-123.hub-traefik.io
---

# Ingress for hub domain in the my-ns namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-catalog-4277033999-hub
  namespace: my-ns
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: Catalog
      name: new-catalog
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: tunnel-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "my-ns-new-catalog-4277033999-stripprefix@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: majestic-beaver-123.hub-traefik.io
      http:
        paths:
          - path: /whoami-3
            pathType: Prefix
            backend:
              service:
                name: whoami-3
                port:
                  number: 8080
  tls:
    - secretName: hub-certificate
      hosts:
        - majestic-beaver-123.hub-traefik.io
---

# Ingress for custom domains in the default namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-catalog-4277033999
  namespace: default
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: Catalog
      name: new-catalog
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: catalog-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "default-new-catalog-4277033999-stripprefix@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: hello.example.com
      http:
        paths:
          - path: /whoami-1
            pathType: Prefix
            backend:
              service:
                name: whoami-1
                port:
                  number: 80
          - path: /whoami-2
            pathType: Prefix
            backend:
              service:
                name: whoami-2
                port:
                  number: 8080
    - host: welcome.example.com
      http:
        paths:
          - path: /whoami-1
            pathType: Prefix
            backend:
              service:
                name: whoami-1
                port:
                  number: 80
          - path: /whoami-2
            pathType: Prefix
            backend:
              service:
                name: whoami-2
                port:
                  number: 8080
  tls:
    - secretName: hub-certificate-custom-domains-4277033999
      hosts:
        - hello.example.com
        - welcome.example.com
---
# Ingress for custom domains in the my-ns namespace.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-catalog-4277033999
  namespace: my-ns
  ownerReferences:
    - apiVersion: hub.traefik.io/v1alpha1
      kind: Catalog
      name: new-catalog
  labels:
    app.kubernetes.io/managed-by: traefik-hub
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: catalog-entrypoint
    traefik.ingress.kubernetes.io/router.middlewares: "my-ns-new-catalog-4277033999-stripprefix@kubernetescrd"
spec:
  ingressClassName: ingress-class
  rules:
    - host: hello.example.com
      http:
        paths:
          - path: /whoami-3
            pathType: Prefix
            backend:
              service:
                name: whoami-3
                port:
                  number: 8080
    - host: welcome.example.com
      http:
        paths:
          - path: /whoami-3
            pathType: Prefix
            backend:
              service:
                name: whoami-3
                port:
                  number: 8080
  tls:
    - secretName: hub-certificate-custom-domains-4277033999
      hosts:
        - hello.example.com
        - welcome.example.com
