pkg/catalog/testdata/new-catalog/want.middlewares.yaml
# Middleware in the default namespace.
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: new-catalog-4277033999-stripprefix
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /whoami-1
      - /whoami-2
---

# Ingress in the my-ns namespace.
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: new-catalog-4277033999-stripprefix
  namespace: my-ns
spec:
  stripPrefix:
    prefixes:
      - /whoami-3
